--- a/style.css
+++ b/style.css
@@ -1,4 +1,34 @@
 //styles 
+<head>
+    <meta charset="UTF-8">
+    <title>Your Page Title</title>
+    
+    <style>
+        /* Your other CSS can be here */
+
+        .top-line { 
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 3mm;
+            height: 100%;
+            background-color: black;
+            animation: slideDown 2s ease-in-out forwards;
+            z-index: 1000; /* Make sure it appears above everything */
+        }
+
+        @keyframes slideDown {
+            0% {
+                height: 0;
+            }
+            100% {
+                height: 100%;
+            }
+        }
+    </style>
+
+</head>
+
 body {
     font-family: sans-serif;
     margin: 0;
