--- a/style.css
+++ b/style.css
@@ -235,4 +235,16 @@ footer p {
   .project-list {
     grid-template-columns: 1fr;
   }
+  /* Horizontal Black Arc */
+.horizontal-arc {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: black;
+  border-radius: 0 0 50% 50%;
+  z-index: 500; /* Ensure it's behind the header */
+}
+
 }
